updated styling on nav & footer, jumboton added with some styling

--- a/Index.html
+++ b/Index.html
@@ -49,8 +49,19 @@
             </div>
         </div>
     </nav>
-
-<H1>Jumbotron</H1>
+    
+    <div class="jumbotron-background">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="jumbotron-title">Manchester Based Photographer</h1>
+          <hr>
+          <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet, voluptates, tempora itaque quasi cumque enim accusantium, nemo aliquid iste earum laboriosam ex perferendis explicabo? Obcaecati blanditiis reiciendis non corporis!.
+          </p>
+          <a class="btn btn-primary" href="#">Book a shoot!</a>
+        </div>
+      </div>
+    </div>
 
 <hr>
 
@@ -69,18 +80,6 @@
                         <a href="#" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">Linkedin</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
@@ -104,7 +103,7 @@
                 </ul>
             </div>
             <div class="col-sm-6 text-right">
-                <p class="inline-block">
+                <p class="copyright-text inline-block">
                 Copyright 2021 - Photographer
                 </p>
             </div>
