Changes to nav, footer and jumbotron

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300&family=Raleway:wght@300&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/00b18c67c0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
@@ -49,27 +51,33 @@
             </div>
         </div>
     </nav>
-    
-    <div class="jumbotron-background">
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="jumbotron-title">Manchester Based Photographer</h1>
-          <hr>
-          <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet, voluptates, tempora itaque quasi cumque enim accusantium, nemo aliquid iste earum laboriosam ex perferendis explicabo? Obcaecati blanditiis reiciendis non corporis!.
-          </p>
-          <a class="btn btn-primary" href="#">Book a shoot!</a>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="jumbotron-background">
+                <div class="opaque-overlay">
+                    <section class="jumbotron jumbotron-fluid">
+                        <h1 class="jumbotron-title"><strong>Manchester Based Photographer</strong></h1>
+                        <hr>
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet, voluptates,
+                            tempora itaque quasi cumque enim accusantium, nemo aliquid iste earum laboriosam ex
+                            perferendis explicabo? Obcaecati blanditiis reiciendis non corporis!.
+                        </p>
+                        <a class="btn btn-light btn-lg" href="#">Book a shoot!</a>
+                </div>
+                </section>
+            </div>
         </div>
-      </div>
     </div>
 
-<hr>
+    <hr>
 
-<H1>Information Card 1</H1>
+    <H1>Information Card 1</H1>
 
-<H1>Information Card 2</H1>
+    <H1>Information Card 2</H1>
 
-<H1>Information Card 3</H1>
+    <H1>Information Card 3</H1>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -104,7 +112,7 @@
             </div>
             <div class="col-sm-6 text-right">
                 <p class="copyright-text inline-block">
-                Copyright 2021 - Photographer
+                    Copyright 2021 - Photographer
                 </p>
             </div>
         </div>
