Added first card to index.html, changed color scheme

--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,7 @@
                             tempora itaque quasi cumque enim accusantium, nemo aliquid iste earum laboriosam ex
                             perferendis explicabo? Obcaecati blanditiis reiciendis non corporis!.
                         </p>
-                        <a class="btn btn-light btn-lg" href="#">Book a shoot!</a>
+                        <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
                 </div>
                 </section>
             </div>
@@ -74,6 +74,24 @@
     <hr>
 
     <H1>Information Card 1</H1>
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-3 " style="max-width: 80vw;">
+                <div class="row no-gutters">
+                    <div class="col-md-7 cardImg-container">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
+                    </div>
+                    <div class="col-md-5">
+                        <div class="card-body">
+                            <h3 class="card-title">Street Photography</h3>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <H1>Information Card 2</H1>
 
