--- a/Index.html
+++ b/Index.html
@@ -71,12 +71,9 @@
         </div>
     </div>
 
-    <hr>
-
-    <H1>Information Card 1</H1>
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3 " style="max-width: 80vw;">
+            <div class="card mb-3 " style="max-width: 100vw;">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
                         <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
@@ -84,8 +81,10 @@
                     <div class="col-md-5">
                         <div class="card-body">
                             <h3 class="card-title">Street Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                                <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
+                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                            <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
                         </div>
                     </div>
                 </div>
@@ -93,9 +92,47 @@
         </div>
     </div>
 
-    <H1>Information Card 2</H1>
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-3" style="max-width: 100vw;">
+                <div class="row no-gutters">
+                    <div class="col-md-5 order-1 order-sm-1 order-md-0">
+                        <div class="card-body">
+                            <h3 class="card-title">Studio Photography</h3>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
+                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                            <a class="btn btn-lg blue-btn" href="#">View studio gallery</a>
+                        </div>
+                    </div>
+                    <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <H1>Information Card 3</H1>
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-3" style="max-width: 100vw;">
+                <div class="row no-gutters">
+                    <div class="col-md-7 cardImg-container">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
+                    </div>
+                    <div class="col-md-5">
+                        <div class="card-body">
+                            <h3 class="card-title">Event Photography</h3>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
+                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                            <a class="btn btn-lg blue-btn" href="#">View event gallery</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
