--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Latest</a>
+                        <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -45,47 +45,42 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About & Enquire</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-   
-    <div class="container-fluid jumbotron-container">
-        <div class="opaque-overlay">&nbsp;</div>
-        <div class="row">
-            <div class="col-12">
-                <section class="jumbotron">
-                    <h1>Manchester Based Photographer</h1>
-                    <hr>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="jumbotron-background">
+                <div class="opaque-overlay">
+                    <section class="jumbotron jumbotron-fluid">
+                        <h1 class="jumbotron-title"><strong>Manchester Based Photographer</strong></h1>
+                        <hr>
                         <p class="lead">
-                            Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
-                            Studio and Event Photography.
-                            <br>
-                            <span class="text-muted">Scroll for more info on shoots.</span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet, voluptates,
+                            tempora itaque quasi cumque enim accusantium, nemo aliquid iste earum laboriosam ex
+                            perferendis explicabo? Obcaecati blanditiis reiciendis non corporis!.
                         </p>
                         <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
-                        <div class="scroll-icon-container text-center d-none d-md-block">
-                            <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
-                        </div>
+                </div>
                 </section>
             </div>
         </div>
     </div>
 
-    <hr id="scroll-point">
-
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3 shadow">
+            <div class="card mb-3 " style="max-width: 100vw;">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="../assets/images/index/Urban-Card.jpg" alt="...">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
-                            <h3 class="card-title">Urban Photography</h3>
+                            <h3 class="card-title">Street Photography</h3>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
                                 distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                 eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
@@ -99,7 +94,7 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3">
+            <div class="card mb-3" style="max-width: 100vw;">
                 <div class="row no-gutters">
                     <div class="col-md-5 order-1 order-sm-1 order-md-0">
                         <div class="card-body">
@@ -111,7 +106,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="...">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
                     </div>
                 </div>
             </div>
@@ -120,10 +115,10 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3">
+            <div class="card mb-3" style="max-width: 100vw;">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="...">
+                        <img src="../assets/images/pexels-josh-hild-3396883.jpg" alt="...">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
