added latest.html with jumbotron

--- a/latest.html
+++ b/latest.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="nav navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="latest.html">Latest</a>
+                        <a class="nav-link active" aria-current="page" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -52,89 +52,37 @@
         </div>
     </nav>
    
-    <div class="container-fluid jumbotron-container index-jumbotron-background">
-        <div class="opaque-overlay">&nbsp;</div>
+    <div class="container-fluid jumbotron-container latest-jumbotron-background">
         <div class="row">
             <div class="col-12">
                 <section class="jumbotron">
-                    <h1>Manchester Based Photographer</h1>
+                    <h1>Latest Work</h1>
                     <hr>
                         <p class="lead">
                             Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
                             Studio and Event Photography.
-                            <br>
-                            <span class="text-muted">Scroll for more info on shoots.</span>
                         </p>
-                        <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
-                        <div class="scroll-icon-container text-center d-none d-md-block">
-                            <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
+                        
+                        <div class="social-links">
+                            <a href="#" target="_blank">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-pinterest" aria-hidden="true"></i>
+                                <span class="sr-only">Pinterest</span>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fa fa-youtube" aria-hidden="true"></i>
+                                <span class="sr-only">Youtube</span>
+                            </a>
+
                         </div>
                 </section>
-            </div>
-        </div>
-    </div>
-
-    <hr id="scroll-point">
-
-    <div class="row">
-        <div class="col-12">
-            <div class="card mb-3 shadow">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="../assets/images/index/Urban-Card.jpg" alt="...">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Urban Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-5 order-1 order-sm-1 order-md-0">
-                        <div class="card-body">
-                            <h3 class="card-title">Studio Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View studio gallery</a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="...">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="...">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Event Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View event gallery</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -143,27 +91,27 @@
         <div id="footer-details" class="row">
             <div class="col-sm-6 text-center">
                 <h5>Follow my socials:</h5>
-                <ul class="list-inline">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
