Fix :hover on social links, Fixed jumbotron shrinking latest.html, Seperated colors in style.css

--- a/latest.html
+++ b/latest.html
@@ -58,12 +58,8 @@
                 <section class="jumbotron">
                     <h1>Latest Work</h1>
                     <hr>
-                        <p class="lead">
-                            Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
-                            Studio and Event Photography.
-                        </p>
-                        
-                        <div class="social-links">
+                        <div class="social-links text-center">
+                            <p class="socials-text"><strong>Like my work? Follow my socials!</strong></p>
                             <a href="#" target="_blank">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
