--- a/Index.html
+++ b/Index.html
@@ -78,7 +78,7 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3 shadow">
+            <div class="card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
                         <img src="../assets/images/index/Urban-Card.jpg" alt="...">
@@ -143,27 +143,27 @@
         <div id="footer-details" class="row">
             <div class="col-sm-6 text-center">
                 <h5>Follow my socials:</h5>
-                <ul class="list-inline">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link" href="#" target="_blank">
+                        <a href="#" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
