Added first card to latest.html with styling , links added to socials

--- a/Index.html
+++ b/Index.html
@@ -78,10 +78,10 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3">
+            <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="../assets/images/index/Urban-Card.jpg" alt="...">
+                        <img src="assets/images/index/Urban-Card.jpg" alt="Street">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
@@ -99,7 +99,7 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3">
+            <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-5 order-1 order-sm-1 order-md-0">
                         <div class="card-body">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="...">
+                        <img src="assets/images/index/Studio-Card.jpg" alt="Studio">
                     </div>
                 </div>
             </div>
@@ -120,10 +120,10 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card mb-3">
+            <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="...">
+                        <img src="assets/images/index/Event-Card.jpg" alt="Concert">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
@@ -145,25 +145,25 @@
                 <h5>Follow my socials:</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.pinterest.co.uk/" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
