--- a/latest.html
+++ b/latest.html
@@ -51,37 +51,74 @@
             </div>
         </div>
     </nav>
-   
+
     <div class="container-fluid jumbotron-container latest-jumbotron-background">
+        <div class="opaque-overlay">&nbsp;</div>
         <div class="row">
             <div class="col-12">
                 <section class="jumbotron">
                     <h1>Latest Work</h1>
                     <hr>
-                        <div class="social-links text-center">
-                            <p class="socials-text"><strong>Like my work? Follow my socials!</strong></p>
-                            <a href="#" target="_blank">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fa fa-pinterest" aria-hidden="true"></i>
-                                <span class="sr-only">Pinterest</span>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                                <span class="sr-only">Instagram</span>
-                            </a>
-                            <a href="#" target="_blank">
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-                                <span class="sr-only">Youtube</span>
-                            </a>
+                    <div class="social-links text-center">
+                        <p class="socials-text"><strong>Like my work? Follow my socials!</strong></p>
+                        <a href="https://en-gb.facebook.com/" target="_blank">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                        <a href="https://www.pinterest.co.uk/" target="_blank">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                        <a href="https://www.youtube.com/" target="_blank">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
 
-                        </div>
+                    </div>
                 </section>
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div class="card latest-card">
+                <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Urban shoot with Eve</h3>
+                    <p class="card-text">18/02/2021
+                        <details>
+                            <summary>Equipment Used</summary>
+                                   <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                   <p>Nikon 24-70mm f2.8</p>
+                                   <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <div class="card latest-card">
+                <img src="..." class="card-img" alt="...">
+                <div class="card-img-overlay">
+                    <h3 class="card-title">Title</h3>
+                    <p class="card-text">Date
+                        <details>
+                            <summary>Equipment Used</summary>
+                                   <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                   <p>Nikon 24-70mm f2.8</p>
+                                   <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                    </p>
+                </div>
+            </div>
+        </div>
+     </div>
+
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -89,25 +126,25 @@
                 <h5>Follow my socials:</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.pinterest.co.uk/" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
